# AskRepo

./: .gitignore  README.md  askrepo.bat  config.py  describer.py  github_fetcher.py  main.py  parser.py  pyproject.toml  query.py  requirements.txt  store.py
src/askrepo/: __init__.py  chunker.py  config.py  describer.py  github_fetcher.py  main.py  parser.py  query.py  store.py  ui.py
src/askrepo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: smoke_test.py  test.py
